# quester

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  HeaderBar.qml  LICENSE  README.md  RELEASE.md  Stable.qmlproject  Stable.qmlproject.qtds  VisualizerView.qml  audioprocessor.cpp  audioprocessor.h  audiovisualizer.cpp  audiovisualizer.h  compile_commands.json  dbus.cpp  dbus.h  generate-xcode-project.sh  install-macos.sh  main.cpp  main.qml  mprisclient.cpp  mprisclient.h  projectmvisualizer.cpp  projectmvisualizer.h  quester.cpp  quester.h  resources.qrc  setup_mpd.py  statistics.cpp  statistics.h  tidyme
.obsidian/: workspace.json
include/: cavacore.h  common.h  config.h
include/input/: common.h
include/output/: common.h
presets/visualizerGradients/: presets.json
qml/: GridViewMode.qml  HeaderBar.qml  SettingsWindow.qml  VisualizerView.qml  WrappedView.qml  main.qml
resources/: MacOSXBundleInfo.plist.in  quester.desktop  resources.qrc  resources.qrc.depends
src/: audiovisualizer.cpp  audiovisualizer.h  dbus.cpp  dbus.h  main.cpp  projectmvisualizer.cpp  projectmvisualizer.h  quester.cpp  quester.h  statistics.cpp  statistics.h
temp/tmp/llfm6/: global.h
